game_server/logs/game_2021_12_31_PID_11276.log
2021-12-31 13:35:34:321 - info: main : redis-connect-database = 0 : 49.50.172.145:6379
2021-12-31 13:35:34:326 - info: sub : redis-connect-database = 1 : 49.50.172.145:6379
2021-12-31 13:35:34:327 - info: connect sub redis : ["server_message"]
2021-12-31 13:35:34:330 - info: msg : redis-connect-database = 2 : 49.50.172.145:6379
2021-12-31 13:35:34:333 - info: mysql freemeta_com com db init : 49.50.172.145:3306
2021-12-31 13:35:34:333 - info: mysql freemeta_log log db init : 49.50.172.145:3306
2021-12-31 13:35:34:333 - info: mysql freemeta_msg msg db init : 49.50.172.145:3306
2021-12-31 13:35:34:349 - info: mysql freemeta_01 shard db init : 10.36.69.58:3306
2021-12-31 13:35:34:370 - info: load achievement reference table success !!
2021-12-31 13:35:34:376 - info: load character reference table success !!
2021-12-31 13:35:34:389 - info: load collection reference table success !!
2021-12-31 13:35:34:396 - info: load daily attendance reference table success !!
2021-12-31 13:35:34:443 - info: load item reference table success !!
2021-12-31 13:35:34:452 - info: load open world reference table success !!
2021-12-31 13:35:34:459 - info: load payment reference table success !!
2021-12-31 13:35:34:466 - info: load play world reference table success !!
2021-12-31 13:35:34:472 - info: load ranking reward reference table success !!
2021-12-31 13:35:34:491 - info: load reward reference table success !!
2021-12-31 13:35:34:499 - info: load reward_fishing reference table success !!
2021-12-31 13:35:34:506 - info: load system shop reference table success !!
2021-12-31 13:35:34:854 - info: 서버가 시작되었습니다. [port:30051]
2021-12-31 13:35:34:855 - info: try to start [freemeta game test mode server] : http://127.0.0.1:30051
2021-12-31 13:35:34:855 - info: packet status : packet status not recorded yet.
2021-12-31 13:35:34:856 - error: C:\workspace\FM_DEV_NCloud\server\trunk\fm_node_server\game_server\test_logic\test_senario1.js:5
<<<<<<< .mine
^^

SyntaxError: Unexpected token '<<'
    at Module._compile (internal/modules/cjs/loader.js:895:18)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:995:10)
    at Module.load (internal/modules/cjs/loader.js:815:32)
    at Function.Module._load (internal/modules/cjs/loader.js:727:14)
    at Module.require (internal/modules/cjs/loader.js:852:19)
    at require (internal/modules/cjs/helpers.js:74:18)
    at C:\workspace\FM_DEV_NCloud\server\trunk\fm_node_server\game_server\test_main.js:92:9
    at Server.<anonymous> (C:\workspace\FM_DEV_NCloud\server\trunk\fm_node_server\game_server\server\index.js:47:7)
    at Object.onceWrapper (events.js:299:28)
    at Server.emit (events.js:210:5)
2021-12-31 13:52:28:839 - info: main : redis-connect-database = 0 : 49.50.172.145:6379
2021-12-31 13:52:28:844 - info: sub : redis-connect-database = 1 : 49.50.172.145:6379
2021-12-31 13:52:28:845 - info: connect sub redis : ["server_message"]
2021-12-31 13:52:28:851 - info: msg : redis-connect-database = 2 : 49.50.172.145:6379
2021-12-31 13:52:28:854 - info: mysql freemeta_com com db init : 49.50.172.145:3306
2021-12-31 13:52:28:854 - info: mysql freemeta_log log db init : 49.50.172.145:3306
2021-12-31 13:52:28:854 - info: mysql freemeta_msg msg db init : 49.50.172.145:3306
2021-12-31 13:52:28:870 - info: mysql freemeta_01 shard db init : 10.36.69.58:3306
2021-12-31 13:52:28:892 - info: load achievement reference table success !!
2021-12-31 13:52:28:899 - info: load character reference table success !!
2021-12-31 13:52:28:911 - info: load collection reference table success !!
2021-12-31 13:52:28:918 - info: load daily attendance reference table success !!
2021-12-31 13:52:28:963 - info: load item reference table success !!
2021-12-31 13:52:28:972 - info: load open world reference table success !!
2021-12-31 13:52:28:979 - info: load payment reference table success !!
2021-12-31 13:52:28:986 - info: load play world reference table success !!
2021-12-31 13:52:28:992 - info: load ranking reward reference table success !!
2021-12-31 13:52:29:011 - info: load reward reference table success !!
2021-12-31 13:52:29:018 - info: load reward_fishing reference table success !!
2021-12-31 13:52:29:023 - info: load system shop reference table success !!
2021-12-31 13:52:29:309 - info: 서버가 시작되었습니다. [port:30051]
2021-12-31 13:52:29:309 - info: try to start [freemeta game test mode server] : http://127.0.0.1:30051
2021-12-31 13:52:29:309 - info: packet status : packet status not recorded yet.
